/*
 * Copyright 2024 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package ground.v1beta1;

option java_multiple_files = true;
option java_package = "com.google.android.ground.proto";

// Describes a single data collection survey. Top level entity in the app.
message Survey {
  // Required. The system-defined unique identifier of this entity.
  string id = 1;

  // User-facing name of the survey.
  string name = 2;

  // User-facing description of the survey.
  string description = 3;

  // Defines who has access to do what with this survey.
  map<string, Role> acl = 4;

  // Required. User id of the survey owner.
  string owner_id = 5;

  // Defines the terms data collectors must agree to before
  // collecting data.
  message DataSharingTerms {
    // Defines the type of data sharing terms the user will see.
    enum Type {
      // Default value when the type is missing.
      TYPE_UNSPECIFIED = 0;

      // Data will only be shared with survey organizers.
      PRIVATE = 1;

      // Data can be made public with no constraints. Data
      // collectors waive all rights to collected data, making
      // it available under the CC0 "No Rights Reserved" license.
      PUBLIC_CC0 = 2;

      // Terms are defined by survey organizers.
      CUSTOM = 3;
    }

    // Required. Type of data sharing terms the data collectors must
    // agree to before collecting data.
    Type type = 1;

    // If type is CUSTOM, this field contains the custom data sharing
    // terms text specified by the survey organizer.
    string custom_text = 2;
  }

  // Defines the terms data collectors must agree to before
  // collecting data.
  DataSharingTerms data_sharing_terms = 6;

  // Defines the survey's current state.
  enum State {
    // Default value when status is missing.
    STATE_UNSPECIFIED = 0;

    // Indicates the survey organizer has not yet completed the survey creation flow.
    DRAFT = 1;

    // Survey is ready to be used/edited.
    READY = 2;
  }

  // Defines the survey's current state.
  State state = 7;
}

// Defines a user's role in a survey.
enum Role {
  // Default value when role is missing.
  ROLE_UNSPECIFIED = 0;

  // User may access survey in read-only model.
  VIEWER = 1;

  // User may also submit data, but not modify jobs or other survey metadata.
  DATA_COLLECTOR = 2;

  // User may also manage the survey, update locations of interest, etc.
  SURVEY_ORGANIZER = 3;
}
